--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,15 +1,30 @@
-<div data-role="main" class="ui-content">
-    <a href="#myPopup2" data-rel="popup" data-position-to="window" class="ui-btn ui-btn-inline ui-corner-all ui-btn-icon-left">Register</a>
-    <div data-role="popup" id="myPopup2" data-overlay-theme="a" class="ui-content" style="min-width:250px;">
-        <form method="post" action="/users/register">
-            <div>
-                <h3>Login Information</h3>
-                <label for="userReg" class="ui-hidden-accessible">Username:</label>
-                <input type="text" name="user" id="userReg" placeholder="Username">
-                <label for="passwdReg" class="ui-hidden-accessible">Password:</label>
-                <input type="password" name="password" id="passwdReg" placeholder="Password">
-                <input type="submit" id="submitRegister" data-inline="true" value="Log in">
+{{#if errors}}
+  {{#each errors}}
+    <div class="alert alert-danger">{{msg}}</div>
+    {{/each}}
+  {{/if}}
+
+<div class="ui one column stackable center aligned page grid">
+    <div class="column eight wide">
+      <h2 class="ui header">Register</h2>
+        <form class="ui form">
+            <div class="field">
+                <label>E-mail</label>
+                <input type="text" name="email" placeholder="E-mail">
             </div>
+            <div class="field">
+                <label>Username</label>
+                <input type="text" name="username" placeholder="Username">
+            </div>
+            <div class="field">
+                <label>Password</label>
+                <input type="password" name="password" placeholder="Password">
+            </div>
+            <div class="field">
+                <label>Re-Enter Password</label>
+                <input type="password" name="password2" placeholder="Re-Enter Password">
+            </div>
+            <button class="ui blue button" type="submit">Submit</button>
         </form>
     </div>
 </div>
