worked on excuses.js

--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -22,6 +22,14 @@
 <body>
     <!--- Header --->
     <header>
+    <div class="topSegment">
+    	<div class="ui segment">
+    	 	<div class="right align">
+    	 		<a class="ui right floated primary button" href="/users/register">Register</a>
+                <a class="ui right floated button" href="/users/login">Login</a>
+            </div>
+        </div>
+    </div>
         <div class="center align">
             <div class="ui primary menu">
                 <a class="item" href="/index"><i class="home icon"></i>Home</a>
@@ -29,11 +37,8 @@
                 <a class="item" href="#">Most Embarrassing Excuses</a>
                 <a class="item" href="#">Most Hilarious Excuses</a>
                 <a class="item" href="#">Most Cringy Excuses</a>
-                <div class="right menu">
-                    <a class="ui button" href="/users/login">Login</a>
-                    <a class="ui primary button" href="/users/register">Register</a>
-                </div>
             </div>
+        </div>
     </header>
     <!--- End of header --->
     <!--- Main --->
