--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -4,19 +4,18 @@
 <head>
     <title>Excuses</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css" />
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.4/semantic.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.4/semantic.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <link href="indexPageStyle.css" rel="stylesheet" type="text/css">
-    <link href="accordion.css" rel="stylesheet" type="text/css">
+    <link href="/stylesheets/indexPageStyle.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
-    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-    <script type="text/javascript" src="app.js"></script>
-
+    <script type="text/javascript" src="/javascript/excuseServing.js"></script>
 </head>
 
 <body>
@@ -32,11 +31,12 @@
     </div>
         <div class="center align">
             <div class="ui primary menu">
-                <a class="item" href="/index"><i class="home icon"></i>Home</a>
-                <a class="item" href="#">Most Popular Excuses</a>
-                <a class="item" href="#">Most Embarrassing Excuses</a>
-                <a class="item" href="#">Most Hilarious Excuses</a>
-                <a class="item" href="#">Most Cringy Excuses</a>
+                <a class="item navBarSearchPick" href="/index"><i class="home icon"></i>Home</a>
+                <a class="item navBarSearchPick" id="mostPopularSearch">Most Popular Excuses</a>
+                <a class="item navBarSearchPick" id="mostEmbarrassingSearch">Most Embarrassing Excuses</a>
+                <a class="item navBarSearchPick" id="mostHilariousSearch">Most Hilarious Excuses</a>
+                <a class="item navBarSearchPick" id="mostCringeWorthySearch">Most Cringe-Worthy Excuses</a>
+                <a class="item navBarSearchPick" id="mostLegitSearch">Most Legitimate Excuses</a>
             </div>
         </div>
     </header>
