fixed homepage link

--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -31,7 +31,7 @@
     </div>
         <div class="center align">
             <div class="ui primary menu">
-                <a class="item navBarSearchPick" href="/index"><i class="home icon"></i>Home</a>
+                <a class="item navBarSearchPick" href="/"><i class="home icon"></i>Home</a>
                 <a class="item navBarSearchPick" id="mostPopularSearch">Most Popular Excuses</a>
                 <a class="item navBarSearchPick" id="mostEmbarrassingSearch">Most Embarrassing Excuses</a>
                 <a class="item navBarSearchPick" id="mostHilariousSearch">Most Hilarious Excuses</a>
