--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,12 @@
+{{#if errors}}
+  {{#each errors}}
+    <div class="ui warning message centered">{{msg}}</div>
+    {{/each}}
+  {{/if}}
 <div class="ui one column stackable center aligned page grid">
     <div class="column eight wide">
       <h2 class="ui header">Login</h2>
-        <form class="ui form">
+        <form class="ui form" method="post" action="/users/login">
             <div class="field">
                 <label>Username</label>
                 <input type="text" name="username" placeholder="Username">
