--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,6 +1,6 @@
 {{#if errors}}
   {{#each errors}}
-    <div class="ui warning message ce">{{msg}}</div>
+    <div class="ui warning message">{{msg}}</div>
     {{/each}}
   {{/if}}
 
