--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,6 +8,7 @@
   </h1>
 
   <main>
+    <!-- Post Pop Out Form -->
     <div class="postPopup">
       <div data-role="main" class="ui-content">
         <a href="#myPopup3" data-rel="popup" data-position-to="window" class="ui-btn ui-btn-inline ui-corner-all">Post</a>
