--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -4,6 +4,7 @@
     {{/each}}
   {{/if}}
 
+<!-- Register New User Form -->
 <div class="ui one column stackable center aligned page grid">
     <div class="column eight wide">
       <h2 class="ui header">Register</h2>
