--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,6 +3,8 @@
     <div class="ui warning message centered">{{msg}}</div>
     {{/each}}
   {{/if}}
+
+  <!-- User Login Form -->
 <div class="ui one column stackable center aligned page grid">
     <div class="column eight wide">
       <h2 class="ui header">Login</h2>
